Fix gx-grid-smart-css not working with "overflow: visible" tables
To ensure that the gx-grid-smart-css width does not overflow the gx-table-cell sizes when direction="horizontal", the content of the smart grid must have "position: absolute".
Also, a ResizeObserver is required to implement autogrow in this case.

--- a/src/components/grid-base/grid-base.scss
+++ b/src/components/grid-base/grid-base.scss
@@ -9,16 +9,8 @@ $grid-content-selector: "& > [slot='grid-content']:not(virtual-scroller), & > * 
 
   @include transition-properties();
 
-  // This custom var is defined in each grid (gx-grid-flex, gx-grid-horizontal
-  // and gx-grid-smart-css), and those grids always have the "gx-grid-base" class.
-  overflow: var(--gx-overflow-style); // Required for gx-loading's positioning
-
-  // When the grid has horizontal scroll (overflow-x: auto), there is no need
-  // to allow "overflow: visible", since it won't be visible
-  // (due to overflow-x: auto)
-  &[direction="horizontal"] {
-    overflow: hidden;
-  }
+  // All grids will hide their content overflow
+  overflow: hidden; // Required for gx-loading's positioning
 
   #{$grid-content-selector} {
     flex: 1;
